changed spacing and removed span

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 			</div>
 
 			<div class="wrap" id="myProfileOuterDiv">
-				<div align="left" class="starred" id="myProfileInnerDiv">
-					<!-- class name kept same with starred, may need to change, Id has been added to differentiate -->
+				<div align="left" class="starred" id="myProfileInnerDiv"><!-- class name kept same with starred, may need to change, Id has been added to differentiate -->
 					&nbsp&nbsp&nbsp<i class="fa fa-user" aria-hidden="true"></i><span>&nbsp&nbspMy Profile</span>
 				</div>
 			</div>
