--- a/index.html
+++ b/index.html
@@ -161,11 +161,9 @@
 						onclick="backHome()"><i class="material-icons">close</i></a>
 				</div>
 				<!-- display starred -->
-				<div id="messages" class="messages">
+				<div id="starmessages" class="messages">
 					<ul>
-						<li class='sent'><img src='images/profile.png' alt='' />
-							<p style="word-wrap: break-word;">Dare not forget my birthday- 10th July<br><br>
-								<span style="float:right; color: darkgray; font-size: 1em">Julia Roberts</span></p></li>
+						
 					</ul>
 				</div>
 				
@@ -190,7 +188,7 @@
 				<div class="wrap" style="display: flex">
 					<input id='chatBox' type="text" class="browser-default"
 						style="width: 100%" placeholder="Write your message..." />
-					<button class="submit" id="sb" onClick='sendChat()'>
+					<button class="submit" id="sb">
 						<i class="fa fa-paper-plane" aria-hidden="true"></i>
 					</button>
 				</div>
