Dynamically loading userContacts and scrollable contacts list

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="wrap">
 					<img id="profile-img" src="images/profile.png" class="online"
 						alt="" />
-					<p>Arjun Shah</p>
+					<p></p>
 					<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
 					<div id="status-options">
 						<ul>
@@ -77,24 +77,6 @@
 			<div id="contacts">
 				&nbsp &nbsp
 				<ul>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Rajat Tripathi</p>
-							</div>
-						</div>
-					</li>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Riya Tilwani</p>
-							</div>
-						</div>
-					</li>
 				</ul>
 			</div>
 			<div id="bottom-bar">
@@ -169,7 +151,7 @@
 				<div class="wrap" style="display: flex">
 					<input id='chatBox' type="text" class="browser-default"
 						style="width: 100%" placeholder="Write your message..." />
-					<button class="submit" id="sb" onClick='sendChat()'>
+					<button class="submit" id="sb" >
 						<i class="fa fa-paper-plane" aria-hidden="true"></i>
 					</button>
 				</div>
