--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		</div>
 		<div id="stardisplay" style="position: absolute; z-index: -1"
 		class="content ">
-		<div class="card " id="pcard">
+		<div class="card" style="background: #E6EAEA;" id="pcard">
 
 			<div id="wrappie">
 
@@ -174,7 +174,7 @@
 						onclick="backHome()"><i class="material-icons">close</i></a>
 				</div>
 				<!-- display starred -->
-				<div id="starmessages" class="messages">
+				<div id="starmessages" class="messages" style="max-height: 600px;">
 					<ul>
 						
 					</ul>
