--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	media="screen,projection" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
+	<script src='js/main.js'></script>
 </head>
 <body id="mainBody">
 	<div id="frame">
@@ -221,7 +222,9 @@
 				</div>
 			</div>
 		</div>
-		<div id="stardisplay" style="position: absolute; z-index: -1"
+
+		<!-- starred message display -->
+		<div id="stardisplay" style="position: absolute; z-index: -10"
 		class="content ">
 		<div class="card" style="background: #E6EAEA;" id="pcard">
 
@@ -230,7 +233,7 @@
 				<!-- Exit button -->
 				<div class="exit-card">
 					<a class="btn-flat"
-						onclick="backHome()"><i class="material-icons">close</i></a>
+						onclick="backHomeFromMyProfile()"><i class="material-icons">close</i></a>
 				</div>
 				<!-- display starred -->
 				<div id="starmessages" class="messages" style="max-height: 600px;">
@@ -243,7 +246,7 @@
 		</div>
 			
 		<!-- Background page -->
-		<div id="background" class="content" style="position: absolute; z-index: 2">
+		<div id="background" class="content" style="position: absolute; z-index: 300">
 			<p>background</p>
 		</div>
 
@@ -385,7 +388,7 @@
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<script src='js/main.js'></script>
+	
 	<script src='js/poll.js'></script>
 </body>
 </html>
