Added firebase database configuration

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<ul>
 							<li id="status-online" class="active"><span
 								class="status-circle"></span>
-								<p>Online</p></li>
+								<p>Available</p></li>
 							<li id="status-away"><span class="status-circle"></span>
 								<p>Away</p></li>
 							<li id="status-busy"><span class="status-circle"></span>
@@ -388,5 +388,24 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	
 	<script src='js/poll.js'></script>
+	
+	<!-- firebase scripts -->
+	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-messaging.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+		apiKey: "AIzaSyAC7vCACafVTaQZ_uyyxSRmoWNofhX185Q",
+		authDomain: "gconnect-4524f.firebaseapp.com",
+		databaseURL: "https://gconnect-4524f.firebaseio.com",
+		projectId: "gconnect-4524f",
+		storageBucket: "gconnect-4524f.appspot.com",
+		messagingSenderId: "792119929745"
+	  };
+	  firebase.initializeApp(config);
+	</script>
+
 </body>
 </html>
