--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	media="screen,projection" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
+	<script src='js/main.js'></script>
 </head>
 <body id="mainBody">
 	<div id="frame">
@@ -62,8 +63,8 @@
 				</div>
 			</div>
 
-			<div class="wrap">
-				<div align="left" class="starred"><!-- class name kept same with starred, may need to change -->
+			<div class="wrap" id="myProfileOuterDiv">
+				<div align="left" class="starred" id="myProfileInnerDiv"><!-- class name kept same with starred, may need to change -->
 					&nbsp&nbsp&nbsp<i class="fa fa-user" aria-hidden="true"></i><span>&nbsp&nbspMy Profile</span>
 				</div>
 			</div>
@@ -93,9 +94,9 @@
 						contact</span>
 				</button>
 				<button id="settings" onclick="random()" id="remider"
-				href="#addreminder" class="modal-trigger">
-				<i class="fa fa-bell" aria-hidden="true"></i> <span>Reminder</span>
-			</button>
+					href="#addreminder" class="modal-trigger">
+					<i class="fa fa-bell" aria-hidden="true"></i> <span>Reminder</span>
+				</button>
 				<button id="addGroup">
 					<i class="fa fa-users" aria-hidden="true"></i><span>Create
 						Group</span>
@@ -107,8 +108,85 @@
 				</button>
 			</div>
 		</div>
-		<div id="cprof" style="position: absolute; z-index: -1"
 
+
+		<!-- my profile page -->
+		<div id="uprof" style="position: absolute; z-index: -10"
+		class="content ">
+			<div class="card " id="pcard">
+
+				<div id="wrappie">
+
+					<!-- Exit button -->
+					<div class="exit-card">
+						<a class="btn-flat"
+							onclick="backHomeFromMyProfile()"><i class="material-icons">close</i></a>
+							<a class="btn-flat"
+								onclick="showEditMyProfile()"><i class="material-icons">edit</i></a>
+					</div>
+
+					<!-- Card Profile image -->
+					<div class="card-image">
+						<img src="images/profile.png" class="display-pic">
+					</div>
+
+					<!-- Card Profile content -->
+					<div class="card-content">
+						<div id="userName">
+							<p id="userNameValue">userName</p>
+						</div>
+						<div id="userEmail">
+							<p class="cardLabel">Email</p>
+							<p id="userEmailValue">kamlesh@gmail.com</p>
+						</div>
+						<div id="userPhone">
+							<p class="cardLabel">Phone No.</p>
+							<p id="userPhoneValue">9676433245</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Edit profile page -->
+		<div id="eprof" style="position: absolute; z-index: -10"
+		class="content ">
+			<div class="card " id="pcard">
+
+				<div id="wrappie">
+
+					<!-- Exit button -->
+					<div class="exit-card">
+						<a class="btn-flat"
+							onclick="backHomeFromMyProfile()"><i class="material-icons">close</i></a>
+					</div>
+
+					<!-- Card Profile image -->
+					<div class="card-image">
+						<img src="images/profile.png" class="display-pic">
+					</div>
+
+					<!-- Card Profile content -->
+					<div class="card-content">
+						<div id="userName">
+							<p>EDIT PROFILE</p>
+							<p id="userNameValue">userName</p>
+						</div>
+						<div id="userEmail">
+							<p class="cardLabel">Email</p>
+							<p id="userEmailValue">kamlesh@gmail.com</p>
+						</div>
+						<div id="userPhone">
+							<p class="cardLabel">Phone No.</p>
+							<p id="userPhoneValue">9676433245</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Contact profile page -->
+		<div id="cprof" style="position: absolute; z-index: -10"
 			class="content ">
 			<div class="card " id="pcard">
 
@@ -117,7 +195,7 @@
 					<!-- Exit button -->
 					<div class="exit-card">
 						<a class="btn-flat"
-							onclick="backHome()"><i class="material-icons">close</i></a>
+							onclick="backHomeFromContactProfile()"><i class="material-icons">close</i></a>
 					</div>
 
 					<!-- Card Profile image -->
@@ -143,7 +221,9 @@
 				</div>
 			</div>
 		</div>
-		<div id="stardisplay" style="position: absolute; z-index: -1"
+
+		<!-- starred message display -->
+		<div id="stardisplay" style="position: absolute; z-index: -10"
 		class="content ">
 		<div class="card" style="background: #E6EAEA;" id="pcard">
 
@@ -152,7 +232,7 @@
 				<!-- Exit button -->
 				<div class="exit-card">
 					<a class="btn-flat"
-						onclick="backHome()"><i class="material-icons">close</i></a>
+						onclick="backHomeFromMyProfile()"><i class="material-icons">close</i></a>
 				</div>
 				<!-- display starred -->
 				<div id="starmessages" class="messages" style="max-height: 600px;">
@@ -164,71 +244,73 @@
 			</div>
 		</div>
 	</div>
-		<div id="chat" class="content" style="z-index: 1">
-			<div class="contact-profile">
 
+	<!-- Background page -->
+	<div id="background" class="content" style="position: absolute; z-index: 300;background:#E6EAEA"></div>
+	
+	<!--Contact Chat page -->
+	<div id="chat" class="content" style="z-index: -10">
+		<div class="contact-profile">
 
-				<img src="images/profile.png" onclick="showContactProfile()" alt="" />
-				<p></p>
+			<img src="images/profile.png" alt="" />
+			<p></p>
 
-				
+			
 
-			</div>
-			<div id="messages" class="messages">
-				<ul>
+		</div>
+		<div id="messages" class="messages">
+			<ul>
 
-				</ul>
-			</div>
-			<div class="message-input">
-				<div class="wrap" style="display: flex">
-					<input id='chatBox' type="text" class="browser-default"
-						style="width: 100%" placeholder="Write your message..." />
+			</ul>
+		</div>
+		<div class="message-input">
+			<div class="wrap" style="display: flex">
+				<input id='chatBox' type="text" class="browser-default"
+					style="width: 100%" placeholder="Write your message..." />
 
-					<button class="submit" id="sb" >
+				<button class="submit" id="sb" >
 
-						<i class="fa fa-paper-plane" aria-hidden="true"></i>
-					</button>
-				</div>
+					<i class="fa fa-paper-plane" aria-hidden="true"></i>
+				</button>
 			</div>
 		</div>
 	</div>
+
 	<div id="addreminder" class="modal">
-			<div class="modal-content">
-				<div class="rowreminder">
-					<form class="col s12">
-						<div class="rowreminder">
-							<div class="input-field col s6">
-								<i class="material-icons prefix">mode_edit</i>	
-								<textarea id="remaindermessage" class="materialize-textarea"></textarea>
-								<label for="icon_prefix2">Enter Message</label>
-							</div>
+		<div class="modal-content">
+			<div class="rowreminder">
+				<form class="col s12">
+					<div class="rowreminder">
+						<div class="input-field col s6">
+							<i class="material-icons prefix">mode_edit</i>
+							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+							<label for="icon_prefix2">Enter Message</label>
 						</div>
-	
-					</form>
-				</div>
-				<div class="input-field col s6">
-					<i class="material-icons prefix">perm_contact_calendar</i> 
-					<input type="text"id="remainderdate"
-						class="datepicker"> <label for="icon_prefix2">Enter
-						Date</label>
-				</div>
-				<div class="input-field col s6">
-					<i class="material-icons prefix">contacts</i>
-					<textarea id="remindercontact" class="materialize-textarea"></textarea>
-					<label for="icon_prefix2">Add Contact</label>
-					<div id="searchContactResult">
-						<ul id="searchContactResultList">
-						</ul>
 					</div>
-				</div>
-				<div class="modal-footer">
-				<a href="#!" style="background:#32465a;color:white;"
-					class="modal-action modal-close btn-flat" id="addrem" onClick='sendremainderChat()'>Add Reminder</a>
-				<a href="#!" style="background:#32465a;color:white;"
-					class="modal-action modal-close btn-flat">Close</a>
+
+				</form>
 			</div>
+			<div class="input-field col s6">
+				<i class="material-icons prefix">access_time</i> <input type="text"
+					class="datepicker"> <label for="icon_prefix2">Enter
+					Date</label>
+			</div>
+			<div class="input-field col s6">
+				<i class="material-icons prefix">contacts</i>
+				<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+				<label for="icon_prefix2">Add Contact</label>
+				<div id="searchContactResult">
+					<ul id="searchContactResultList">
+					</ul>
+				</div>
+			</div>
+			<div class="modal-footer">
+
+				<a href="#!" style="background:#32465a;color:white;" class="modal-action modal-close btn-flat">Close</a>
+
 			</div>
 		</div>
+	</div>
 	<div id="addContactModal" class="modal">
 		<div class="modal-content">
 			<input type="text" id="searchText"
@@ -304,7 +386,7 @@
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<script src='js/main.js'></script>
+	
 	<script src='js/poll.js'></script>
 </body>
 </html>
