--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
 				<form class="col s12">
 					<div class="rowreminder">
 						<div class="input-field col s6">
-							<i class="material-icons prefix">mode_edit</i>
-							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+							<i class="material-icons prefix">mode_edit</i>	
+							<textarea id="remaindermessage" class="materialize-textarea"></textarea>
 							<label for="icon_prefix2">Enter Message</label>
 						</div>
 					</div>
@@ -291,13 +291,14 @@
 				</form>
 			</div>
 			<div class="input-field col s6">
-				<i class="material-icons prefix">access_time</i> <input type="text"
+				<i class="material-icons prefix">perm_contact_calendar</i> 
+				<input type="text"id="remainderdate"
 					class="datepicker"> <label for="icon_prefix2">Enter
 					Date</label>
 			</div>
 			<div class="input-field col s6">
 				<i class="material-icons prefix">contacts</i>
-				<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+				<textarea id="remindercontact" class="materialize-textarea"></textarea>
 				<label for="icon_prefix2">Add Contact</label>
 				<div id="searchContactResult">
 					<ul id="searchContactResultList">
@@ -305,10 +306,11 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-
-				<a href="#!" style="background:#32465a;color:white;" class="modal-action modal-close btn-flat">Close</a>
-
-			</div>
+			<a href="#!" style="background:#32465a;color:white;"
+				class="modal-action modal-close btn-flat" id="addrem" onClick='sendremainderChat()'>Add Reminder</a>
+			<a href="#!" style="background:#32465a;color:white;"
+				class="modal-action modal-close btn-flat">Close</a>
+		</div>
 		</div>
 	</div>
 	<div id="addContactModal" class="modal">
@@ -386,7 +388,7 @@
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	
+		<script src='js/main.js'></script>
 	<script src='js/poll.js'></script>
 </body>
 </html>
