--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 	media="screen,projection" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-	<script src='js/main.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+<script src='js/plugins/jquery-2.2.4.min.js'></script>
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src='js/main.js'></script>
+<script src='js/poll.js'></script>
+<link rel="stylesheet" href="css/croppie.css" />
+<script src="js/croppie.js"></script>
 </head>
 <body id="mainBody">
 	<div id="frame">
@@ -47,7 +55,7 @@
 							<li id="status-offline"><span class="status-circle"></span>
 								<p>Offline</p></li>
 							<li onclick="logout()" id="logout"><i id="logout-button"
-								class="fa fa-sign-out" aria-hidden="true"></i></span>
+								class="fa fa-sign-out" aria-hidden="true"></i>
 								<p>Logout</p></li>
 						</ul>
 					</div>
@@ -68,7 +76,6 @@
 					&nbsp&nbsp&nbsp<i class="fa fa-user" aria-hidden="true"></i><span>&nbsp&nbspMy Profile</span>
 				</div>
 			</div>
-
 			<div class="wrap">
 				<div align="left" class="starred" onclick="showStarred()">
 					&nbsp&nbsp&nbsp<i style="color: gold;" class="fa fa-star" aria-hidden="true"></i><span>&nbsp&nbspStarred Messages</span>
@@ -161,24 +168,30 @@
 							onclick="backHomeFromMyProfile()"><i class="material-icons">close</i></a>
 					</div>
 
-					<!-- Card Profile image -->
-					<div class="card-image">
-						<img src="images/profile.png" class="display-pic">
-					</div>
-
+					<form>
+						<img src="" id="upload-demo"/>
+					</form>
+					
 					<!-- Card Profile content -->
 					<div class="card-content">
-						<div id="userName">
-							<p>EDIT PROFILE</p>
-							<p id="userNameValue">userName</p>
+						<div class="card-action">
+							<input type='file' onchange="readURL(this);"  accept="image/jpeg, image/png" style="margin-left:10%"/><br><br>
+							<a id="updateProfilePictureBtn" href="#">Update Profile Picture</a>
 						</div>
-						<div id="userEmail">
+						<div id="userName" class="input-field">
+							<p class="cardLabel">Full Name</p>
+							<input id="userNameValue" type="text">
+						</div>
+						<div id="userEmail" class="input-field">
 							<p class="cardLabel">Email</p>
-							<p id="userEmailValue">kamlesh@gmail.com</p>
+							<input id="userEmailValue" type="email" class="validate">
 						</div>
-						<div id="userPhone">
+						<div id="userPhone" class="input-field">
 							<p class="cardLabel">Phone No.</p>
-							<p id="userPhoneValue">9676433245</p>
+							<input id="phone" type="text" class="validate">
+						</div>
+						<div class="card-action">
+							<a href="#">Update Profile</a>
 						</div>
 					</div>
 				</div>
@@ -282,8 +295,8 @@
 				<form class="col s12">
 					<div class="rowreminder">
 						<div class="input-field col s6">
-							<i class="material-icons prefix">mode_edit</i>	
-							<textarea id="remaindermessage" class="materialize-textarea"></textarea>
+							<i class="material-icons prefix">mode_edit</i>
+							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
 							<label for="icon_prefix2">Enter Message</label>
 						</div>
 					</div>
@@ -291,14 +304,13 @@
 				</form>
 			</div>
 			<div class="input-field col s6">
-				<i class="material-icons prefix">perm_contact_calendar</i> 
-				<input type="text"id="remainderdate"
+				<i class="material-icons prefix">access_time</i> <input type="text"
 					class="datepicker"> <label for="icon_prefix2">Enter
 					Date</label>
 			</div>
 			<div class="input-field col s6">
 				<i class="material-icons prefix">contacts</i>
-				<textarea id="remindercontact" class="materialize-textarea"></textarea>
+				<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
 				<label for="icon_prefix2">Add Contact</label>
 				<div id="searchContactResult">
 					<ul id="searchContactResultList">
@@ -306,11 +318,10 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-			<a href="#!" style="background:#32465a;color:white;"
-				class="modal-action modal-close btn-flat" id="addrem" onClick='sendremainderChat()'>Add Reminder</a>
-			<a href="#!" style="background:#32465a;color:white;"
-				class="modal-action modal-close btn-flat">Close</a>
-		</div>
+
+				<a href="#!" style="background:#32465a;color:white;" class="modal-action modal-close btn-flat">Close</a>
+
+			</div>
 		</div>
 	</div>
 	<div id="addContactModal" class="modal">
@@ -318,9 +329,12 @@
 			<input type="text" id="searchText"
 
 				placeholder="Search by name, e-mail id" />
+				<input type="submit" id="searchUserButton" class = " btn-flat"
+				value="Search" style="background:#32465a;color:white;"/>
+				
 
-			<div id="searchContactResult">
-				<ul id="searchContactResultList">
+			<div id="searchUserResult">
+				<ul id="searchUserResultList">
 				</ul>
 			</div>
 
@@ -328,7 +342,7 @@
 		<div class="modal-footer">
 
 				<a href="#!" style="background:#32465a;color:white;"
-				class="modal-action modal-close btn-flat">Close</a>
+				class="modal-action modal-close btn-flat" onclick="clearSearchBar()">Close</a>
 		</div>
 	</div>
 	<div id="viewPoll" class="modal">
@@ -382,13 +396,7 @@
 				</div>			
 			</div>
 		</div>
-	
 	</div> 
-
-	<script src='js/plugins/jquery-2.2.4.min.js'></script>
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-		<script src='js/main.js'></script>
-	<script src='js/poll.js'></script>
+	<script src='js/main.js'></script>
 </body>
 </html>
