--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <script src='js/plugins/jquery-2.2.4.min.js'></script>
 <script type="text/javascript"
 	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src='js/populate.js'></script>
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
 <link rel="stylesheet" href="css/croppie.css" />
