--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div id="sidepanel">
 			<div id="profile">
 				<div class="wrap">
-					<img id="profile-img" src="images/profile.png" class="online"
+					<img id="profile-img" src="" class="online"
 						alt="" />
 					<p></p>
 					<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
@@ -135,7 +135,7 @@
 
 					<!-- Card Profile image -->
 					<div class="card-image">
-						<img src="images/profile.png" class="display-pic">
+						<img src="" class="display-pic">
 					</div>
 
 					<!-- Card Profile content -->
@@ -192,7 +192,7 @@
 							<input id="phone" type="text" class="validate">
 						</div>
 						<div class="card-action">
-							<a href="#">Update Profile</a>
+							<a id="updateProfileInfoBtn" href="#">Update Profile</a>
 						</div>
 					</div>
 				</div>
