--- a/index.html
+++ b/index.html
@@ -289,14 +289,15 @@
 		</div>
 	</div>
 
-	<div id="addreminder" class="modal">
+	
+<div id="addreminder" class="modal">
 		<div class="modal-content">
 			<div class="rowreminder">
 				<form class="col s12">
 					<div class="rowreminder">
 						<div class="input-field col s6">
-							<i class="material-icons prefix">mode_edit</i>
-							<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+							<i class="material-icons prefix">mode_edit</i>	
+							<textarea id="remaindermessage" class="materialize-textarea"></textarea>
 							<label for="icon_prefix2">Enter Message</label>
 						</div>
 					</div>
@@ -304,13 +305,14 @@
 				</form>
 			</div>
 			<div class="input-field col s6">
-				<i class="material-icons prefix">access_time</i> <input type="text"
+				<i class="material-icons prefix">perm_contact_calendar</i> 
+				<input type="text"id="remainderdate"
 					class="datepicker"> <label for="icon_prefix2">Enter
 					Date</label>
 			</div>
 			<div class="input-field col s6">
 				<i class="material-icons prefix">contacts</i>
-				<textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+				<textarea id="remindercontact" class="materialize-textarea"></textarea>
 				<label for="icon_prefix2">Add Contact</label>
 				<div id="searchContactResult">
 					<ul id="searchContactResultList">
@@ -318,10 +320,11 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-
-				<a href="#!" style="background:#32465a;color:white;" class="modal-action modal-close btn-flat">Close</a>
-
-			</div>
+			<a href="#!" style="background:#32465a;color:white;"
+				class="modal-action modal-close btn-flat" id="addrem" onClick='sendReminderChat()'>Add Reminder</a>
+			<a href="#!" style="background:#32465a;color:white;"
+				class="modal-action modal-close btn-flat">Close</a>
+		</div>
 		</div>
 	</div>
 	<div id="addContactModal" class="modal">
