--- a/index.html
+++ b/index.html
@@ -247,10 +247,13 @@
 			<div class="row">
 					<div class="col s10">
 						<span class="card-image waves-effect waves-block waves-light" >
-							<p class="font-weight-bold" id="create">
-								<font face="verdana" color="black" size="5">Create
+							<div id="create">
+							<a class="btn-floating btn-large waves-effect waves-light red">
+							<i class="material-icons">add</i></a>
+							<font face="verdana" color="black" size="5">Create
 								</font>
-							</p>
+							
+							</div>
 						</span>
 					</div>
 					<div class="col s2" id="closePoll">
@@ -266,7 +269,7 @@
 				<div class="row">
 					<div class="col s12" id="popUp_1">
 						<form>
-							<input type="text" name="question" id="question" 
+							<input type="text" name="question" id="questionPoll" 
 									placeholder="Enter your question for Poll"/><br>
 							<div class="input_fields_wrap">							
 								<p>
@@ -275,10 +278,10 @@
 									<i class="material-icons">add</i>
 									</a>
 								</p>
-							<div><input type="text" name="mytext[]" id="addContactPoll"></div>
+							<div><input type="text" name="mytext" id="addContactPoll1"></div>
 							</div>
 							<br>
-							<input type="submit" value="Send the Poll" 
+							<input type="button" id="sendPoll" value="Send the Poll" 
 								class="waves-effect waves-light btn">
 						</form>
 					</div>
