--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@
 					<!-- Card Profile content -->
 					<div class="card-content">
 						<div id="userName">
-							<p id="userNameValue">userName</p>
+							<p id="userNameValue"></p>
 						</div>
 						<div id="userEmail">
 							<p class="cardLabel">Email</p>
-							<p id="userEmailValue">kamlesh@gmail.com</p>
+							<p id="userEmailValue"></p>
 						</div>
 						<div id="userPhone">
 							<p class="cardLabel">Phone No.</p>
-							<p id="userPhoneValue">9676433245</p>
+							<p id="userPhoneValue"></p>
 						</div>
 					</div>
 
