--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
 					<!-- Card Profile content -->
 					<div class="card-content">
 						<div class="card-action">
-							<input type='file' onchange="readURL(this);"  accept="image/jpeg, image/png" style="margin-left:10%"/><br><br>
-							<a id="updateProfilePictureBtn" href="#">Update Profile Picture</a>
+							<input type='file' onchange="readURL(this);"  accept="image/jpeg, image/png" style="margin-left:10%;color:green;"/><br><br>
 						</div>
 						<div id="userName" class="input-field">
 							<p class="cardLabel">Full Name</p>
@@ -192,7 +191,7 @@
 							<input id="phone" type="text" class="validate">
 						</div>
 						<div class="card-action">
-							<a id="updateProfileInfoBtn" href="#">Update Profile</a>
+							<a id="updateProfileBtn" href="#">Update Profile</a>
 						</div>
 					</div>
 				</div>
