--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 <script src='js/populate.js'></script>
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
+<script src='js/util.js'></script>
+<script src='js/userUtil.js'></script>
+<script src='js/model.js'></script>
 <link rel="stylesheet" href="css/croppie.css" />
 <script src="js/croppie.js"></script>
 </head>
