--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
 <script src='js/plugins/jquery-2.2.4.min.js'></script>
 <script type="text/javascript"
-	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src='js/model.js'></script>
+<script src='js/util.js'></script>
+<script src='js/userUtil.js'></script>
 <script src='js/populate.js'></script>
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
