--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <script type="text/javascript"
 	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src='js/populate.js'></script>
+<script type="text/javascript" src="js/model.js"></script>
+<script type="text/javascript" src="js/userUtil.js"></script>
+<script type="text/javascript" src="js/util.js"></script>
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
 <link rel="stylesheet" href="css/croppie.css" />
