code changes in reminder

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
 <script src='js/plugins/jquery-2.2.4.min.js'></script>
 <script type="text/javascript"
-	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src='js/model.js'></script>
+<script src='js/util.js'></script>
+<script src='js/userUtil.js'></script>
 <script src='js/populate.js'></script>
+
 <script type="text/javascript" src="js/model.js"></script>
 <script type="text/javascript" src="js/userUtil.js"></script>
 <script type="text/javascript" src="js/util.js"></script>
@@ -336,7 +340,7 @@
 		</div>
 			<div class="modal-footer">
 			<a href="#!" style="background:#32465a;color:white;"
-				class="modal-action modal-close btn-flat" id="addrem" onClick='sendReminderChat()'>Add Reminder</a>
+				class="modal-action modal-close btn-flat" id="addrem" onClick='sendReminderChatValues()'>Add Reminder</a>
 			<a href="#!" style="background:#32465a;color:white;"
 				class="modal-action modal-close btn-flat">Close</a>
 		</div>
