--- a/register.html
+++ b/register.html
@@ -116,7 +116,7 @@
 	<!-- jQuery Library -->
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<!--materialize js-->
-	<script type="text/javascript" src="js/materialize.js"></script>
+	<script type="text/javascript" src="js/plugins/materialize.js"></script>
 	<!--prism-->
 	<script type="text/javascript" src="js/plugins/prism/prism.js"></script>
 	<!--scrollbar-->
@@ -124,9 +124,10 @@
 		src="js/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
 	<!--plugins.js - Some Specific JS codes for Plugin Settings-->
-	<script type="text/javascript" src="js/plugins.min.js"></script>
+	<script type="text/javascript" src="js/plugins/plugins.min.js"></script>
 	<!--custom-script.js - Add your own theme custom JS-->
-	<script type="text/javascript" src="js/custom-script.js"></script>
+	<script type="text/javascript" src="js/model.js"></script>
+	<script type="text/javascript" src="js/userUtil.js"></script>
 	<script type="text/javascript" src="js/util.js"></script>
 	<script type="text/javascript" src="js/register.js"></script>
 
