--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
 	<!-- jQuery Library -->
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<!--materialize js-->
-	<script type="text/javascript" src="js/materialize.js"></script>
+	<script type="text/javascript" src="js/plugins/materialize.js"></script>
 	<!--prism-->
 	<script type="text/javascript" src="js/plugins/prism/prism.js"></script>
 	<!--scrollbar-->
@@ -110,9 +110,7 @@
 		src="js/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
 	<!--plugins.js - Some Specific JS codes for Plugin Settings-->
-	<script type="text/javascript" src="js/plugins.min.js"></script>
-	<!--custom-script.js - Add your own theme custom JS-->
-	<script type="text/javascript" src="js/custom-script.js"></script>
+	<script type="text/javascript" src="js/plugins/plugins.min.js"></script>
 	<script type="text/javascript" src="js/util.js"></script>
 	<script type="text/javascript" src="js/login.js"></script>
 </body>
