--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@ src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.m
 <script src='js/model.js'></script>
 <script src='js/util.js'></script>
 <script src='js/userUtil.js'></script>
-<!-- <script src='js/populate.js'></script> -->
+<script src='js/populate.js'></script> 
 <script src='js/main.js'></script>
 <script src='js/poll.js'></script>
+<!--<script src='js/pollFirebase.js'></script>-->
 <script src='js/util.js'></script>
 <script src='js/userUtil.js'></script>
 <script src='js/model.js'></script>
@@ -421,7 +422,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.m
 							<div class="input_fields_wrap">							
 								<p>
 									<i class="material-icons prefix">contacts</i> Add Contacts
-									<a class="btn-floating" id="addPollContact" style="float: right;" onclick="remindersearchUse()">
+									<a class="btn-floating" id="addPollContact" style="float: right;" >
 									<i class="material-icons">add</i>
 									</a>
 								</p>
